gramatica/MiniCParser.py
# Generated from gramatica/MiniC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'case'", "'char'", "'continue'", 
                     "'default'", "'do'", "'else'", "'float'", "'for'", 
                     "'if'", "'int'", "'return'", "'sizeof'", "'struct'", 
                     "'switch'", "'union'", "'void'", "'while'", "'typedef'", 
                     "'static'", "'extern'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", 
                     "'|'", "'&&'", "'||'", "'^'", "'!'", "'?'", "':'", 
                     "';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", 
                     "'-='", "'=='", "'!='", "'->'", "'.'" ]

    symbolicNames = [ "<INVALID>", "Break", "Case", "Char", "Continue", 
                      "Default", "Do", "Else", "Float", "For", "If", "Int", 
                      "Return", "Sizeof", "Struct", "Switch", "Union", "Void", 
                      "While", "Typedef", "Static", "Extern", "LeftParen", 
                      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
                      "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "Plus", "PlusPlus", "Minus", "MinusMinus", "Star", 
                      "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
                      "Not", "Question", "Colon", "Semi", "Comma", "Assign", 
                      "StarAssign", "DivAssign", "ModAssign", "PlusAssign", 
                      "MinusAssign", "Equal", "NotEqual", "Arrow", "Dot", 
                      "Identifier", "Constant", "StringLiteral", "Directive", 
                      "Whitespace", "Newline", "BlockComment", "LineComment" ]

    RULE_compilationUnit = 0
    RULE_preprocessorDirective = 1
    RULE_externalDeclaration = 2
    RULE_functionDefinition = 3
    RULE_declaration = 4
    RULE_initDeclaratorList = 5
    RULE_initDeclarator = 6
    RULE_initializer = 7
    RULE_initializerList = 8
    RULE_typeSpecifier = 9
    RULE_structOrUnionSpecifier = 10
    RULE_structOrUnion = 11
    RULE_structDeclarationList = 12
    RULE_structDeclaration = 13
    RULE_structDeclaratorList = 14
    RULE_structDeclarator = 15
    RULE_declarator = 16
    RULE_directDeclarator = 17
    RULE_parameterTypeList = 18
    RULE_parameterList = 19
    RULE_parameterDeclaration = 20
    RULE_pointer = 21
    RULE_typeName = 22
    RULE_abstractDeclarator = 23
    RULE_directAbstractDeclarator = 24
    RULE_typedefName = 25
    RULE_expression = 26
    RULE_constantExpression = 27
    RULE_assignmentExpression = 28
    RULE_assignmentOperator = 29
    RULE_conditionalExpression = 30
    RULE_logicalOrExpression = 31
    RULE_logicalAndExpression = 32
    RULE_inclusiveOrExpression = 33
    RULE_exclusiveOrExpression = 34
    RULE_andExpression = 35
    RULE_equalityExpression = 36
    RULE_relationalExpression = 37
    RULE_additiveExpression = 38
    RULE_multiplicativeExpression = 39
    RULE_castExpression = 40
    RULE_unaryExpression = 41
    RULE_unaryOperator = 42
    RULE_postfixExpression = 43
    RULE_argumentExpressionList = 44
    RULE_primaryExpression = 45
    RULE_statement = 46
    RULE_labeledStatement = 47
    RULE_compoundStatement = 48
    RULE_blockItemList = 49
    RULE_blockItem = 50
    RULE_expressionStatement = 51
    RULE_selectionStatement = 52
    RULE_iterationStatement = 53
    RULE_forCondition = 54
    RULE_forDeclaration = 55
    RULE_jumpStatement = 56

    ruleNames =  [ "compilationUnit", "preprocessorDirective", "externalDeclaration", 
                   "functionDefinition", "declaration", "initDeclaratorList", 
                   "initDeclarator", "initializer", "initializerList", "typeSpecifier", 
                   "structOrUnionSpecifier", "structOrUnion", "structDeclarationList", 
                   "structDeclaration", "structDeclaratorList", "structDeclarator", 
                   "declarator", "directDeclarator", "parameterTypeList", 
                   "parameterList", "parameterDeclaration", "pointer", "typeName", 
                   "abstractDeclarator", "directAbstractDeclarator", "typedefName", 
                   "expression", "constantExpression", "assignmentExpression", 
                   "assignmentOperator", "conditionalExpression", "logicalOrExpression", 
                   "logicalAndExpression", "inclusiveOrExpression", "exclusiveOrExpression", 
                   "andExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "castExpression", 
                   "unaryExpression", "unaryOperator", "postfixExpression", 
                   "argumentExpressionList", "primaryExpression", "statement", 
                   "labeledStatement", "compoundStatement", "blockItemList", 
                   "blockItem", "expressionStatement", "selectionStatement", 
                   "iterationStatement", "forCondition", "forDeclaration", 
                   "jumpStatement" ]

    EOF = Token.EOF
    Break=1
    Case=2
    Char=3
    Continue=4
    Default=5
    Do=6
    Else=7
    Float=8
    For=9
    If=10
    Int=11
    Return=12
    Sizeof=13
    Struct=14
    Switch=15
    Union=16
    Void=17
    While=18
    Typedef=19
    Static=20
    Extern=21
    LeftParen=22
    RightParen=23
    LeftBracket=24
    RightBracket=25
    LeftBrace=26
    RightBrace=27
    Less=28
    LessEqual=29
    Greater=30
    GreaterEqual=31
    Plus=32
    PlusPlus=33
    Minus=34
    MinusMinus=35
    Star=36
    Div=37
    Mod=38
    And=39
    Or=40
    AndAnd=41
    OrOr=42
    Caret=43
    Not=44
    Question=45
    Colon=46
    Semi=47
    Comma=48
    Assign=49
    StarAssign=50
    DivAssign=51
    ModAssign=52
    PlusAssign=53
    MinusAssign=54
    Equal=55
    NotEqual=56
    Arrow=57
    Dot=58
    Identifier=59
    Constant=60
    StringLiteral=61
    Directive=62
    Whitespace=63
    Newline=64
    BlockComment=65
    LineComment=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)

        def Directive(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.Directive)
            else:
                return self.getToken(MiniCParser.Directive, i)

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExternalDeclarationContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = MiniCParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5188146770731026696) != 0):
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [62]:
                    self.state = 114
                    self.match(MiniCParser.Directive)
                    pass
                elif token in [3, 8, 11, 14, 16, 17, 59]:
                    self.state = 115
                    self.externalDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreprocessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Directive(self):
            return self.getToken(MiniCParser.Directive, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_preprocessorDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreprocessorDirective" ):
                listener.enterPreprocessorDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreprocessorDirective" ):
                listener.exitPreprocessorDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreprocessorDirective" ):
                return visitor.visitPreprocessorDirective(self)
            else:
                return visitor.visitChildren(self)




    def preprocessorDirective(self):

        localctx = MiniCParser.PreprocessorDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preprocessorDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(MiniCParser.Directive)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(MiniCParser.FunctionDefinitionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MiniCParser.DeclarationContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_externalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalDeclaration" ):
                listener.enterExternalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalDeclaration" ):
                listener.exitExternalDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalDeclaration" ):
                return visitor.visitExternalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def externalDeclaration(self):

        localctx = MiniCParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_externalDeclaration)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.functionDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.TypeSpecifierContext,0)


        def declarator(self):
            return self.getTypedRuleContext(MiniCParser.DeclaratorContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(MiniCParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = MiniCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.typeSpecifier()
            self.state = 130
            self.declarator()
            self.state = 131
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.TypeSpecifierContext,0)


        def Semi(self):
            return self.getToken(MiniCParser.Semi, 0)

        def initDeclaratorList(self):
            return self.getTypedRuleContext(MiniCParser.InitDeclaratorListContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MiniCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.typeSpecifier()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 576460821027094528) != 0):
                self.state = 134
                self.initDeclaratorList()


            self.state = 137
            self.match(MiniCParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclaratorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.InitDeclaratorContext)
            else:
                return self.getTypedRuleContext(MiniCParser.InitDeclaratorContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.Comma)
            else:
                return self.getToken(MiniCParser.Comma, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_initDeclaratorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclaratorList" ):
                listener.enterInitDeclaratorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclaratorList" ):
                listener.exitInitDeclaratorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorList" ):
                return visitor.visitInitDeclaratorList(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorList(self):

        localctx = MiniCParser.InitDeclaratorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initDeclaratorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.initDeclarator()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 140
                self.match(MiniCParser.Comma)
                self.state = 141
                self.initDeclarator()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(MiniCParser.DeclaratorContext,0)


        def Assign(self):
            return self.getToken(MiniCParser.Assign, 0)

        def initializer(self):
            return self.getTypedRuleContext(MiniCParser.InitializerContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_initDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclarator" ):
                listener.enterInitDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclarator" ):
                listener.exitInitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclarator" ):
                return visitor.visitInitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initDeclarator(self):

        localctx = MiniCParser.InitDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.declarator()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 148
                self.match(MiniCParser.Assign)
                self.state = 149
                self.initializer()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(MiniCParser.AssignmentExpressionContext,0)


        def LeftBrace(self):
            return self.getToken(MiniCParser.LeftBrace, 0)

        def initializerList(self):
            return self.getTypedRuleContext(MiniCParser.InitializerListContext,0)


        def RightBrace(self):
            return self.getToken(MiniCParser.RightBrace, 0)

        def Comma(self):
            return self.getToken(MiniCParser.Comma, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializer" ):
                listener.enterInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializer" ):
                listener.exitInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = MiniCParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initializer)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 22, 32, 33, 34, 35, 36, 39, 44, 59, 60, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.assignmentExpression()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(MiniCParser.LeftBrace)
                self.state = 154
                self.initializerList()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==48:
                    self.state = 155
                    self.match(MiniCParser.Comma)


                self.state = 158
                self.match(MiniCParser.RightBrace)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initializer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.InitializerContext)
            else:
                return self.getTypedRuleContext(MiniCParser.InitializerContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.Comma)
            else:
                return self.getToken(MiniCParser.Comma, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_initializerList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializerList" ):
                listener.enterInitializerList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializerList" ):
                listener.exitInitializerList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializerList" ):
                return visitor.visitInitializerList(self)
            else:
                return visitor.visitChildren(self)




    def initializerList(self):

        localctx = MiniCParser.InitializerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initializerList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.initializer()
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 163
                    self.match(MiniCParser.Comma)
                    self.state = 164
                    self.initializer() 
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Void(self):
            return self.getToken(MiniCParser.Void, 0)

        def Char(self):
            return self.getToken(MiniCParser.Char, 0)

        def Int(self):
            return self.getToken(MiniCParser.Int, 0)

        def Float(self):
            return self.getToken(MiniCParser.Float, 0)

        def structOrUnionSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.StructOrUnionSpecifierContext,0)


        def typedefName(self):
            return self.getTypedRuleContext(MiniCParser.TypedefNameContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = MiniCParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeSpecifier)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(MiniCParser.Void)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(MiniCParser.Char)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(MiniCParser.Int)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 173
                self.match(MiniCParser.Float)
                pass
            elif token in [14, 16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 174
                self.structOrUnionSpecifier()
                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 6)
                self.state = 175
                self.typedefName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructOrUnionSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structOrUnion(self):
            return self.getTypedRuleContext(MiniCParser.StructOrUnionContext,0)


        def LeftBrace(self):
